--- a/public/html/admindashboard.html
+++ b/public/html/admindashboard.html
@@ -75,7 +75,7 @@
       <div class="container-fluid">
           <a class="navbar-brand" id="nav-text" href="#">Daystar Day Care System</a>
           <div class="d-flex align-items-center">
-              <img id="admin-profile-image" src="../../public/images/dayimage.jpg" alt="Admin" class="rounded-circle" style="width: 40px; height: 40px; margin-right: 10px;">
+              <img id="admin-profile-image" src="../images/dayimage.jpg" alt="Admin" class="rounded-circle" style="width: 40px; height: 40px; margin-right: 10px;">
               <span id="admin-name" class="navbar-text"></span>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -156,7 +156,7 @@
   </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/8bd93dfcff.js" crossorigin="anonymous"></script>
-    <script src="../../public/js/present-sitter.js"></script>    
-    <script src="../../public/js/register-baby.js"></script>  
+    <script src="../js/present-sitter.js"></script>    
+    <script src="../js/register-baby.js"></script>  
 </body>
 </html>
