--- a/public/html/index.html
+++ b/public/html/index.html
@@ -53,7 +53,7 @@
         }
 
         .jumbotron {
-            background: url('../../public/images/bg.jpg') no-repeat center center;
+            background: url('../images/bg.jpg') no-repeat center center;
             background-size: cover;
             color: white;
             text-align: center;
@@ -165,7 +165,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="../../public/images/badge.jpg" alt="Logo">
+                <img src="../images/badge.jpg" alt="Logo">
                 Daystar Daycare
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -186,7 +186,7 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../html/login.html">Login</a>
+                        <a class="nav-link" href="login.html">Login</a>
                     </li>
                 </ul>
             </div>
@@ -243,7 +243,7 @@
     <!-- Call to Action -->
     <div class="text-center my-5">
         <h2>Get Started Today!</h2>
-        <a href="../html/signup.html" class="btn btn-success">Sign Up Now</a>
+        <a href="signup.html" class="btn btn-success">Sign Up Now</a>
     </div>
 
     <!-- Footer -->
