--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../../public/css/loginpage.css"  rel="stylesheet"/>
+    <link href="../css/loginpage.css"  rel="stylesheet"/>
 
     <!-- <link rel="stylesheet" type="text/css" href="../../public/css/signup.css"> -->
     <title>Signup</title>
@@ -25,6 +25,6 @@
       </div>
     <div id="notification" class="notification"></div>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script> -->
-    <script src="../../public/js/signup.js"></script>
+    <script src="../js/signup.js"></script>
 </body>
 </html>
