testing with product client

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -186,7 +186,7 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html">Login</a>
+                        <a class="nav-link" href="https://daycare-management.vercel.app/html/login.html">Login</a>
                     </li>
                 </ul>
             </div>
@@ -243,7 +243,7 @@
     <!-- Call to Action -->
     <div class="text-center my-5">
         <h2>Get Started Today!</h2>
-        <a href="signup.html" class="btn btn-success">Sign Up Now</a>
+        <a href="https://daycare-management.vercel.app/html/signup.html" class="btn btn-success">Sign Up Now</a>
     </div>
 
     <!-- Footer -->
