updating for other directories

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -53,7 +53,7 @@
         }
 
         .jumbotron {
-            background: url('../images/bg.jpg') no-repeat center center;
+            background: url('https://daystar-daycare99.netlify.app/images/bg.jpg') no-repeat center center;
             background-size: cover;
             color: white;
             text-align: center;
@@ -165,7 +165,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="../images/badge.jpg" alt="Logo">
+                <img src="https://daystar-daycare99.netlify.app/images/badge.jpg" alt="Logo">
                 Daystar Daycare
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
