--- a/public/html/login.html
+++ b/public/html/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Log In</title>
-  <link href="../css/loginpage.css"  rel="stylesheet"/>
+  <link href="https://daycare-management.vercel.app/css/loginpage.css"  rel="stylesheet"/>
 </head>
 <body>
   <div class="form-container">
@@ -17,6 +17,6 @@
     <p>Don't have an account? <a href="signup.html">Sign up</a></p> 
     </div>
     <div id="notification" class="notification"></div>
-    <script src="../js/login.js"></script>
+    <script src="https://daycare-management.vercel.app/js/login.js"></script>
 </body>
 </html>
