--- a/public/html/adminlogin.html
+++ b/public/html/adminlogin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="../css/index.css"  rel="stylesheet"/>
+    <link href="https://daycare-management.vercel.app/css/index.css"  rel="stylesheet"/>
     <title>Login</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
                       <input type="password" class="form-control" id="password" name="password">
                     </div>
                     <p>New here ?
-                    <a href="../html/signup.html">Signup</a>
+                    <a href="signup.html">Signup</a>
                     </p>
                     <a href="">
                         <button type="submit" class="btn">Login</button>
