--- a/public/html/babiesform.html
+++ b/public/html/babiesform.html
@@ -111,6 +111,6 @@
     <div id="notification" class="notification"></div>
 
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.3/jspdf.umd.min.js"></script> -->
-    <script src="../js/register-baby.js"></script>
+    <script src="https://daycare-management.vercel.app/js/register-baby.js"></script>
 </body>
 </html>
