--- a/public/html/newSitter.html
+++ b/public/html/newSitter.html
@@ -140,6 +140,6 @@
     });
 });
     </script>
-    <!-- <script src="../../public/js/sitter-signup.js"></script> -->
+    <!-- <script src="https://daycare-management.vercel.app/js/sitter-signup.js"></script> -->
 </body>
 </html>
