--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -25,6 +25,6 @@
       </div>
     <div id="notification" class="notification"></div>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script> -->
-    <script src="../js/signup.js"></script>
+    <script src="https://daycare-management.vercel.app/js/signup.js"></script>
 </body>
 </html>
