--- a/public/html/newSitter.html
+++ b/public/html/newSitter.html
@@ -111,7 +111,7 @@
 
         console.log(formData);
 
-        fetch('http://127.0.0.1:8014/sitters/create_sitter', {
+        fetch('https://daycare-management.onrender.com/sitters/create_sitter', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
