--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -12,7 +12,7 @@
 <body>
   <div class="form-container">
     <h2 class="header">Signup</h2>
-    <form id="form" action="http://127.0.0.1:8014/admins/create_admin" method="POST">
+    <form id="form" action="https://daycare-management.onrender.com/admins/create_admin" method="POST">
       <input type="text" id="token" name="token" placeholder="Token" required>
       <input type="text" id="firstname" name="firstname" placeholder="First Name" required>
       <input type="text" id="lastname" name="lastname" placeholder="Last Name" required>
