--- a/public/html/signupToken.html
+++ b/public/html/signupToken.html
@@ -87,7 +87,7 @@
                 admin_id: parseInt(adminId)
             };
 
-            fetch('http://127.0.0.1:8014/admins/generate_signup_token', {
+            fetch('https://daycare-management.onrender.com/admins/generate_signup_token', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
