--- a/public/html/presentSitter.html
+++ b/public/html/presentSitter.html
@@ -92,7 +92,7 @@
         });
 
         function fetchSitterBillDetails() {
-            fetch('http://127.0.0.1:8014/sitters/get_all_sitters_bill')
+            fetch('https://daycare-management.onrender.com/sitters/get_all_sitters_bill')
             .then(response => response.json())
             .then(data => populateTable(data.data))
             .catch(error => {
@@ -123,7 +123,7 @@
         }
 
         function updatePayment(sitterId) {
-            fetch(`http://127.0.0.1:8014/sitters/update_payment?sitter_id=${sitterId}`, {
+            fetch(`https://daycare-management.onrender.com/sitters/update_payment?sitter_id=${sitterId}`, {
                 method: 'PUT'
             }).then(response => response.json())
               .then(data => {
