--- a/public/html/index.html
+++ b/public/html/index.html
@@ -156,7 +156,12 @@
             .list-group-item-action:hover {
                 background-color: #f8f9fa; 
             }
-
+            .footer-bottom {
+            background-color: #222;
+            color: #ccc;
+            padding: 10px 0;
+            text-align: center;
+        }
     </style>
     
 </head>
@@ -335,7 +340,13 @@
                 </div>
             </div>
         </div>
+        <div class="footer-bottom py-3">
+            <div class="container">
+                &copy; 2023 Daystar Daycare. All Rights Reserved. Designed by Atim Winnie.
+            </div>
+        </div>
     </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/8bd93dfcff.js" crossorigin="anonymous"></script>
