--- a/public/html/admindashboard.html
+++ b/public/html/admindashboard.html
@@ -67,6 +67,12 @@
     background-color: #504df6 !important; 
     color: rgb(251, 251, 2); 
 }
+.footer-bottom {
+            background-color: #222;
+            color: #ccc;
+            padding: 10px 0;
+            text-align: center;
+        }
 </style>
     <title>Admin Dashboard</title>
 </head>
@@ -154,6 +160,13 @@
           </div>
       </div>
   </div>
+  <footer>
+    <div class="footer-bottom py-3">
+    <div class="container">
+        &copy; 2023 Daystar Daycare. All Rights Reserved. Designed by Atim Winnie.
+    </div>
+</div>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/8bd93dfcff.js" crossorigin="anonymous"></script>
     <script src="https://daycare-management.vercel.app/js/present-sitter.js"></script>    
