--- a/public/html/adminlogin.html
+++ b/public/html/adminlogin.html
@@ -42,7 +42,13 @@
 
     </section>
 
-
+    <footer>
+      <div class="footer-bottom py-3">
+      <div class="container">
+          &copy; 2023 Daystar Daycare. All Rights Reserved. Designed by Atim Winnie.
+      </div>
+  </div>
+  </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
