--- a/public/html/index.html
+++ b/public/html/index.html
@@ -333,10 +333,10 @@
                     <h6 class="text-uppercase fw-bold mb-4">
                         Contact
                     </h6>
-                    <p><i class="fas fa-home me-3"></i> 123 Main St, Your City, Your State</p>
-                    <p><i class="fas fa-envelope me-3"></i> info@example.com</p>
-                    <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-                    <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+                    <p><i class="fas fa-home me-3"></i> 1999 Main St, Kabalagala</p>
+                    <p><i class="fas fa-envelope me-3"></i> atwinnie21@gmail.com</p>
+                    <p><i class="fas fa-phone me-3"></i> + 256 773 658 634</p>
+                    <p><i class="fas fa-print me-3"></i> + 256 704 887 550</p>
                 </div>
             </div>
         </div>
