--- a/public/html/babiesform.html
+++ b/public/html/babiesform.html
@@ -109,13 +109,13 @@
     </div>
 
     <div id="notification" class="notification"></div>
-    <footer>
+    <!-- <footer>
         <div class="footer-bottom py-3">
         <div class="container">
             &copy; 2023 Daystar Daycare. All Rights Reserved. Designed by Atim Winnie.
         </div>
     </div>
-    </footer>
+    </footer> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.3/jspdf.umd.min.js"></script> -->
     <script src="https://daycare-management.vercel.app/js/register-baby.js"></script>
 </body>
