--- a/public/html/babiesform.html
+++ b/public/html/babiesform.html
@@ -77,6 +77,9 @@
             border-radius: 5px;
             cursor: pointer;
         }
+        .btn{
+            background-color: #1b0c90;
+        }
     </style>
 </head>
 <body>
@@ -84,7 +87,7 @@
         <!-- <h2 class="header">Adding a Baby</h2> -->
         <form id="searchBabyForm">
             <input type="text" class="form-control" id="babyAccess" placeholder="Enter Access Number">
-            <button type="button" class="btn btn-primary" onclick="searchBaby()">Search Baby</button>
+            <button type="button" class="btn" onclick="searchBaby()">Search Baby</button>
         </form>
         <br>
         <form id="registerBabyForm">
