--- a/public/html/index.html
+++ b/public/html/index.html
@@ -334,7 +334,7 @@
                         Contact
                     </h6>
                     <p><i class="fas fa-home me-3"></i> 1999 Main St, Kabalagala</p>
-                    <p><i class="fas fa-envelope me-3"></i> atwinnie21@gmail.com</p>
+                    <p><i class="fas fa-envelope me-3"></i> daystardaycare9@gmail.com</p>
                     <p><i class="fas fa-phone me-3"></i> + 256 773 658 634</p>
                     <p><i class="fas fa-print me-3"></i> + 256 704 887 550</p>
                 </div>
