--- a/public/html/index.html
+++ b/public/html/index.html
@@ -233,13 +233,13 @@
             <div class="col-md-6">
                 <blockquote class="blockquote">
                     <p>"The daily updates and photos reassure us that our child is having a great time and learning a lot!"</p>
-                    <footer class="blockquote-footer">Jane Doe</footer>
+                    <footer class="blockquote-footer">Kigenyi Jim</footer>
                 </blockquote>
             </div>
             <div class="col-md-6">
                 <blockquote class="blockquote">
                     <p>"This system has made it so much easier to keep track of our child's progress and daily needs."</p>
-                    <footer class="blockquote-footer">John Smith</footer>
+                    <footer class="blockquote-footer">Kalera James</footer>
                 </blockquote>
             </div>
         </div>
