include forgot password

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Log In</title>
-  <link href="https://daycare-management.vercel.app/css/loginpage.css"  rel="stylesheet"/>
+  <link href="https://daycare-management.vercel.app/css/loginpage.css" rel="stylesheet"/>
 </head>
 <body>
   <div class="form-container">
@@ -15,8 +15,9 @@
         <button type="submit">Login</button>
     </form>
     <p>Don't have an account? <a href="signup.html">Sign up</a></p> 
-    </div>
-    <div id="notification" class="notification"></div>
-    <script src="https://daycare-management.vercel.app/js/login.js"></script>
+    <p>Forgot your password? <a href="forgot_password.html">Reset it here</a></p>
+  </div>
+  <div id="notification" class="notification"></div>
+  <script src="https://daycare-management.vercel.app/js/login.js"></script>
 </body>
 </html>
