--- a/public/html/procurement.html
+++ b/public/html/procurement.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Procurement Corner</title>
     <style>
-        .form-container {
+        /* .form-container {
             width: 50%;
             margin: auto;
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
+        } */
         .form-control, .form-select {
             width: 100%;
             padding: 10px;
