--- a/public/html/forgot_password.html
+++ b/public/html/forgot_password.html
@@ -26,7 +26,7 @@
             event.preventDefault();
             const email = document.getElementById('email').value.trim();
 
-            fetch(`http://127.0.0.1:8014/admins/generate_reset_token?email=${email}`, {
+            fetch(`https://daycare-management.vercel.app/admins/generate_reset_token?email=${email}`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
