--- a/public/html/changePassword.html
+++ b/public/html/changePassword.html
@@ -52,7 +52,7 @@
                 return;
             }
 
-            fetch('https://daycare-management.vercel.app/admins/reset_password', {
+            fetch('https://daycare-management.onrender.com/admins/reset_password', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
